feat: 添加压缩运行时任务以优化构建输出